<resources>
    <string name="app_name">Junior</string>
    <string name="icons">&#xe601;&#xe60a;&#xe641;&#xe644;&#xe63c;&#xe61a;&#xe636;&#xe69f;</string>
    <string name="menu_first">话匣子</string>
    <string name="menu_second">讨论吧</string>
    <string name="menu_third">小课</string>
    <string name="menu_forth">我的</string>
    <string name="search">搜索</string>
    <string name="please_input">请输入</string>
    <string name="forget_psw"><u>忘记密码</u></string>
    <string name="Language">多语言</string>
    <string name="person_information">个人信息</string>
    <string name="account_security">账号安全</string>
    <string name="settings">设置</string>
    <string name="setting_language_auto">跟随系统</string>
    <string name="setting_language_chinese">简体中文</string>
    <string name="setting_language_english">English</string>
    <string name="Password_Change">修改密码</string>
    <string name="Phone_Change">号码绑定</string>
    <string name="Log_Out">退出登录</string>
    <string name="name">昵称</string>
    <string name="Photo">头像</string>
    <string name="User_ID">用户号</string>
    <string name="gender">性别</string>
    <string name="Phone">手机号码</string>
    <string name="ChangeInfor">修改信息</string>
    <string name="Saving">保存</string>
    <string name="OriginalPassword">原密码</string>
    <string name="NewPassword">新密码</string>
    <string name="Confirm">确认密码</string>
    <string name="Male">男</string>
    <string name="Female">女</string>
    <string name="Cancel">取消</string>
    <string name="TitleMessage">提示</string>
    <string name="Message">是否要退出登录</string>
    <string name="confirm">确认</string>
    <string name="message">信息</string>
    <string name="Success">成功</string>
    <string name="SuccessMessage">密码修改成功</string>
    <string name="Error">错误</string>
    <string name="ErrorMessage1">原密码错误</string>
    <string name="ErrorMessage2">新密码输入不一致</string>
    <string name="ErrorMessage3">新密码不能为空</string>

    <string name="Slogan">给你最好的留学关怀</string>
    <string name="appName">轻舟</string>
    <string name="Login">密码登录</string>
    <string name="Login1">验证码登录</string>
    <string name="Login2">登录</string>
    <string name="Password">密码</string>
    <string name="GainCode">获取验证码</string>
    <string name="Remember">记住密码</string>
    <string name="register">注册</string>
    <string name="InputCode">请输入验证码</string>
    <string name="InputPassward">请输入密码</string>
    <string name="HintPhone1">请输入正确的手机号</string>
    <string name="HintPhone2">该手机号码尚未注册</string>
    <string name="HintPhone3">请输入正确的密码</string>
    <string name="HintCode">请输入正确的验证码</string>
    <string name="SuccessLogin">登录成功</string>

    /*注册界面*/
    <string name="RegisterPhone">注册手机号码：</string>
    <string name="SettingName">     \ \ \ \ 设置用户名：</string>
    <string name="PasswordLogin">    \ \ \ \ \ \ \ \ 登录密码：</string>
    <string name="PasswordConfirm"> \ \ 确认登录密码： </string>
    <string name="VCode">\ \ \ \ \ \ \ \ \ \ 验证码：</string>
    <string name="getCode">获取验证码</string>
    <string name="RegisterM1">请输入新手机号码</string>
    <string name="RegisterM2">请输入新用户名</string>
    <string name="RegisterM3">请输入登录密码</string>
    <string name="RegisterM4">请再次输入登录密码</string>
    <string name="RegisterM5">请输入验证码</string>
    <string name="LoginM1">请稍等</string>
    <string name="LoginM2">你真的要取消注册吗？</string>
    <string name="LoginM3">去意已决</string>
    <string name="LoginM4">我再想想</string>
    <string name="registerM1">该用户已经存在</string>
    <string name="registerM2">输入的手机号码非11位，请重新输入</string>
    <string name="registerM3">两次输入的密码不一样，请重新确认密码</string>
    <string name="registerM4">注册失败，请再次检查所填信息</string>
    <string name="registerM5">注册成功！</string>
    <string name="ToastM1">手机号码不能为空</string>
    <string name="ToastM2">密码不能为空</string>
    <string name="ToastM3">必须重新输入密码</string>
    <string name="ToastM4">用户名不能为空</string>

    /*密码忘记界面*/
    <string name="Forget1">输入手机号：</string>
    <string name="Forget2">输入新密码：</string>
    <string name="Forget3">确认新密码：</string>
    <string name="Forget4">\ \ \ \ \ \ \ \ 验证码：</string>
    <string name="Forget5">请记住验证码</string>
    <string name="Forget6">获取</string>
    <string name="Forget7">确定</string>
    <string name="HintM1">请输入11位手机号码</string>
    <string name="HintM2">请输入新密码</string>
    <string name="HintM3">请再次输入新密码</string>
    <string name="HintM4">请输入验证码</string>
    <string name="HintM5">你真的要取消找回密码吗？</string>
    <string name="toastM1">请输入正确的手机号</string>
    <string name="toastM2">请输入正确的新密码</string>
    <string name="toastM3">两次输入的新密码不一致</string>
    <string name="toastM4">请输入正确的验证码</string>
    <string name="toastM5">密码修改成功</string>
    <string name="HintMessage1">手机号</string>
    <string name="HintMessage2">，本次验证码是</string>
    <string name="HintMessage3">，请输入验证码</string>
    <string name="Ok">好的</string>


    <string name="commentWriteTitle">请写评论</string>
    <string name="commentSubmit">评论</string>
    <string name="commentSuccessful">评论成功</string>
    <string name="commentFailed">评论失败</string>
    <string name="commentWriteHine">写下你想说的吧~</string>

    <string name="networksuccess">网络连接成功</string>
    <string name="networkloss">网络连接失败</string>


</resources>
