<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/tv_newphonenum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/RegisterPhone"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textAllCaps="false"/>

        <EditText
            android:id="@+id/et_enternewnum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/tv_newphonenum"
            android:background="@drawable/editext_selector"
            android:gravity="left|center"
            android:hint="@string/RegisterM1"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="#000000"
            android:textColorHint="#cccccc"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_newusername"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/SettingName"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textAllCaps="false"/>

        <EditText
            android:id="@+id/et_enternewname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/tv_newusername"
            android:background="@drawable/editext_selector"
            android:gravity="left|center"
            android:hint="@string/RegisterM2"
            android:inputType="text"
            android:maxLength="11"
            android:textColor="#000000"
            android:textColorHint="#cccccc"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_newpassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/PasswordLogin"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_enternewpsd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/tv_newpassword"
            android:background="@drawable/editext_selector"
            android:gravity="left|center"
            android:hint="@string/RegisterM3"
            android:inputType="textPassword"
            android:maxLength="11"
            android:textColor="#000000"
            android:textColorHint="#cccccc"
            android:textSize="18sp"
            android:textAllCaps="false"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_confirmpsd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/PasswordConfirm"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textAllCaps="false"/>

        <EditText
            android:id="@+id/et_enterconfirmpsd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/tv_confirmpsd"
            android:background="@drawable/editext_selector"
            android:gravity="left|center"
            android:hint="@string/RegisterM4"
            android:inputType="textPassword"
            android:maxLength="11"
            android:textColor="#000000"
            android:textColorHint="#cccccc"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_verifycode_regist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/VCode"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textAllCaps="false"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_verifycode_regist">

            <EditText
                android:id="@+id/et_verifycode_regist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/editext_selector"
                android:gravity="left|center"
                android:hint="@string/RegisterM5"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="#000000"
                android:textColorHint="#cccccc"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_verifycode_regist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/Forget6"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textAllCaps="false"/>
        </FrameLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_confirm_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:text="@string/Forget7"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_cancel_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/Cancel"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textAllCaps="false"/>
    </RelativeLayout>

</LinearLayout>