<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <RelativeLayout
        android:id="@+id/rl_followSystem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_followSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/setting_language_auto"
            android:textSize="16dp"
            />

        <ImageView
            android:id="@+id/iv_followSystem"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/language_select"
            android:visibility="visible"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e5e5e5"/>

    <RelativeLayout
        android:id="@+id/rl_chinese"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:visibility="visible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_language_chinese"
            android:layout_marginLeft="20dp"
            android:id="@+id/tv_chinese"
            android:layout_centerVertical="true"
            android:textSize="16dp"/>

        <ImageView
            android:id="@+id/iv_chinese"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/language_select"
            android:visibility="visible"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e5e5e5"/>

    <RelativeLayout
        android:id="@+id/rl_english"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:visibility="visible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_language_english"
            android:layout_marginLeft="20dp"
            android:id="@+id/tv_english"
            android:layout_centerVertical="true"
            android:textSize="16dp"/>

        <ImageView
            android:id="@+id/iv_english"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/language_select"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e5e5e5"/>

</LinearLayout>